# mr.dom

./: .dockerignore  .env  .env.bak  .flake8  .gitignore  CHECKLIST-HANDOVER.md  Dockerfile  Dockerfile.puppeteer  README-AGENTOS.md  README-puppeteer.md  README.md  REDIS_CLOUD_CONFIGURADO.md  RESUMO-PARA-PASSAGEM.md  TRILHA_TESTES_RESUMO.md  TYPEBOT-WEBHOOK-FIX-SUMMARY.md  apiapp.py  apichunker.py  apimain.py  apirag.py  app.py  chunker.py  config.env  config.env.backup  dump.rdb  env.example  pyproject.toml  pytest.ini  rag.py  requirements.txt  setup-trila-redis-cloud.py  test-redis-cloud-simple.py  test.env
.github/: dependabot.yml
.github/workflows/: python-package.yml
.venv311/: pyvenv.cfg
.venv311/Scripts/: activate  activate.bat
api/: __init__.py  main.py  openapi.yaml  test_app.py  test_connection.py
api/domain/: __init__.py  bot_logic.py  models.py
api/routers/: __init__.py  agents.py  assistant_preview.py  chatwoot_agentbot.py  chatwoot_token_webhook.py  health.py
api/services/: __init__.py  agent_os_integration.py  chatwoot_client.py  mrdom_qualification_logic.py  n8n_client.py  openai_client.py
api/tests/: __init__.py  conftest.py  factories.py  test_analytics.py  test_bot_logic.py  test_chatwoot_integration.py  test_end_to_end.py  test_endpoints.py  test_n8n_integration.py  test_trilha_completa.py
api/tests/test_data/: __init__.py  message_templates.py  trilha_test_data.json
app/core/: cache.py  logging.py  middlewares.py  settings.py
app/workers/: worker.py
chroma/: chroma.sqlite3
compose/: Dockerfile  Dockerfile.test  docker-compose.test.yml  docker-compose.yml  init-db.sql  init-test-db.sql
compose/prometheus.yml/: prometheus.yml
docs/: README.md  TYPEBOT-BODY-CORRECTION.md  agentos-integration.md  ai-training-audit-checklist.md  ai-training-execution-guide.md  ai-training-workflow.md  api.md  aws-rds-setup.md  bedrock-agentos-integration.md  components.md  configuration.md  core.md  domain.md  examples.md  getting-started.md  github-redis-cloud-fix.md  n8n-agentos-integration.md  operational-handover-guide.md  overview.md  quick-rds-setup.md  redis-cloud-setup.md  redis-setup.md  sandbox-guide.md  services.md  supabase-setup.md  testing.md  trilha-testes.md  usage-guides.md
examples/: advanced_sandbox.py  agentos_integration_example.py  bedrock_agentos_integration.py  conversation_sandbox.py  mrdom_qualification_sandbox.py  n8n-workflow-modification.json  simple_test.py  working_demo.py
mrdom-knowledge-pt-br/: README.md  mrdom_index_mapping.json  mrdom_knowledge_chunks.jsonl  mrdom_tfidf.joblib  query_local_tfidf.py  upload_openai.py
mrdom-knowledge-pt-br/files/: Pitch Comercial 2.docx  Pitch SDR AIDA - Tecnologia 1.docx  Playbook de Treinamento - SRD IA - Chatbot.docx  mrdom_functions_schema.json  mrdom_message_templates.json  mrdom_n8n_blueprint.json
mrdom_vectorstore_package/: list_vectorstore_files.py  upload_openai.py
redis/: redis.conf  start-redis.bat
scripts/: ai-auditor-demo.py  ai-auditor-simple.py  ai-project-setup.py  ai-training-auditor.py  chatwoot_account_demo.ps1  chatwoot_account_reply.ps1  chatwoot_account_set_attributes.ps1  chatwoot_agentbot_test.ps1  chatwoot_demo.ps1  chatwoot_public_send.ps1  check_chatwoot_token.py  cleanup-test-env.sh  configure-aws-rds.bat  configure-database.bat  configure-redis-cloud-auto.py  configure-redis-cloud.py  create-n8n-chat-histories-table.sql  create-n8n-table-simple.py  create-n8n-table.bat  create-n8n-table.py  fix-docker.bat  install-redis.bat  manual-postgres-setup.bat  quick-test.bat  quick-validation.py  redis-commands.bat  reset-postgres.bat  reset-postgres.sh  run-tests.bat  run-tests.sh  run-trilha-tests.py  run_rebuild.py  setup-redis-cloud-manual.py  setup-redis.bat  setup-test-env.bat  setup-test-env.sh  setup-test-environment.py  start_api.ps1  start_rag_api.ps1  test-agentos-integration.py  (+9 more)
